fixed small gui layout issues
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12916 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -7,7 +7,7 @@
   font-style:normal;
   font-variant:normal;
   max-width:100%;
-  width: 99%;
+  width: 100%;
   height:750px;
 }
 
@@ -246,10 +246,9 @@ hr {
 }
 
 #querylayout, .querylayout{
-  width:98%;
+  width:100%;
   float:left;
   margin-top: 10px;
-  margin-left: 2%;
 }
 
 
@@ -267,10 +266,9 @@ hr {
 }
 
 #previewlayout{
-  width:98%;
+  width:100%;
   float:left;
   margin-top: 10px;
-  margin-left: 2%;
 }
 
 #qioptiontitle, #definitiontitle, #qiresulttitle, #layouttitle, #previewtitle, .layouttitle{
@@ -432,7 +430,7 @@ button.btnhov{
 }
 #qiquerydefinition {
   float:right;
-  width: 98%;
+  width: 100%;
   border-collapse: collapse;
 }
 #qiDefTab {
